// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterEditor component should render dimension editor 1`] = `
[
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-j1vt9l-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              time1Hour
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id=":r0:"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-1ms3s8l-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-j1vt9l-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              In list
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id=":r3:"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-1ms3s8l-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1gwh1pd"
      >
        <div
          className="css-1eu8dn3-input-wrapper"
          data-testid="input-wrapper"
        >
          <div
            className="css-1kr5nyd-input-inputWrapper"
          >
            <input
              aria-invalid={false}
              className="css-r3ryyz-input-input"
              id=":r6:"
              onBlur={[Function]}
              onChange={[Function]}
              onKeyDown={[Function]}
              placeholder="Expressions"
              style={
                {
                  "paddingLeft": undefined,
                  "paddingRight": 12,
                }
              }
              value=""
            />
            <div
              className="css-h4nffn-input-suffix"
            >
              <button
                aria-disabled={false}
                className="css-1sak3dw-button"
                disabled={true}
                type="button"
              >
                <span
                  className="css-1riaxdn"
                >
                  Add
                </span>
              </button>
            </div>
          </div>
        </div>
        <ul
          className="css-bpjvw"
        >
          <li
            className="css-193qen2"
            style={
              {
                "backgroundColor": "#B15415",
                "borderColor": "#E7823D",
              }
            }
          >
            <span
              className="css-vf5797"
            >
              1234
            </span>
            <button
              aria-label="Remove tag: 1234"
              className="css-19ayuns"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="lg"
              tabIndex={0}
              type="button"
            >
              <svg
                data-testid="times"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </button>
          </li>
          <li
            className="css-193qen2"
            style={
              {
                "backgroundColor": "#3F2B5B",
                "borderColor": "#655181",
              }
            }
          >
            <span
              className="css-vf5797"
            >
              5678
            </span>
            <button
              aria-label="Remove tag: 5678"
              className="css-19ayuns"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onMouseLeave={[Function]}
              onMouseMove={[Function]}
              onPointerDown={[Function]}
              onPointerEnter={[Function]}
              size="lg"
              tabIndex={0}
              type="button"
            >
              <svg
                data-testid="times"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              />
            </button>
          </li>
        </ul>
      </div>
    </div>
  </div>,
]
`;

exports[`FilterEditor component should render metric editor 1`] = `
[
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-j1vt9l-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              edgeHitsSum
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id=":rd:"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-1ms3s8l-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-j1vt9l-input-wrapper css-smf98s"
        onKeyDown={[Function]}
      >
        <span
          className="css-1f43avz-a11yText-A11yText"
          id="react-select-5-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          className="css-1f43avz-a11yText-A11yText"
          role="log"
        />
        <div
          className="css-1i88p6p"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="css-1q0c0d5-grafana-select-value-container"
          >
            <div
              className="css-8nwx1l-singleValue css-0"
            >
              Equal
            </div>
            <div
              className="css-1eu65zc"
              data-value=""
            >
              <input
                aria-activedescendant=""
                aria-autocomplete="list"
                aria-expanded={false}
                aria-haspopup={true}
                autoCapitalize="none"
                autoComplete="off"
                autoCorrect="off"
                className=""
                disabled={false}
                id=":rg:"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                role="combobox"
                spellCheck="false"
                style={
                  {
                    "background": 0,
                    "border": 0,
                    "color": "inherit",
                    "font": "inherit",
                    "gridArea": "1 / 2",
                    "label": "input",
                    "margin": 0,
                    "minWidth": "2px",
                    "opacity": 1,
                    "outline": 0,
                    "padding": 0,
                    "width": "100%",
                  }
                }
                tabIndex={0}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="css-1ms3s8l-input-suffix"
          >
            <svg
              data-testid="angle-down"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="css-1uqla6q"
  >
    <div
      className="css-1tu59u4"
    >
      <div
        className="css-1nvt9es-input-wrapper"
        data-testid="input-wrapper"
      >
        <div
          className="css-1kr5nyd-input-inputWrapper"
        >
          <input
            aria-invalid={false}
            className="css-r3ryyz-input-input"
            id=":rj:"
            onChange={[Function]}
            placeholder="Expression"
            style={
              {
                "paddingLeft": undefined,
                "paddingRight": undefined,
              }
            }
            value="1000"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;
